--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     padding: 0 20px;
     margin: 0;
+    box-sizing: border-box;
 }
 
 main {
@@ -11,7 +12,7 @@ main {
 
 .title {
     text-align: center;
-    width: 60%;
+    width: 460px;
 }
 
 .title-main {
@@ -20,31 +21,36 @@ main {
 
 .title__description {
     font-size: 1.3rem;
-    width: 60%;
+    width: 100%;
     margin: 0 auto;
 }
 
 .range {
-    width: 40%;
+    width: 380px;
     background: red;
     border-radius: 10px;
-    padding: 30px 10px;
+    padding: 30px 15px 0 15px;
     margin: 20px 0;
+    box-sizing: border-box;
 }
 
 .field {
     display: flex;
     align-items: center;
+    height: 100%;
+}
+
+.range .sliderValue-div {
+    position: relative;
+    width: 100%;
 }
 
 .sliderValue-div span {
     position: absolute;
-    height: 40px;
-    width: 40px;
     transform: translateX(-50%) scale(0);
     transform-origin: bottom;
     transition: transform 0.3s ease-in-out;
-    top: 190px;
+    top: -30px;
     z-index: 2;
 }
 
