--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,5 @@
-body {
-    padding: 0 20px;
-    margin: 0 10px;
-    box-sizing: border-box;
-}
-
-p {
-    margin: 0;
+.historic {
+    background: #01507a;
 }
 
 main {
@@ -15,22 +9,34 @@ main {
     width: 100%;
 }
 
+.glass {
+    background: white;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3))
+}
+
 .main-section {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     width: 50%;
-    height: 100vh;
+    height: calc(100vh - 30px);
+    margin: 20px auto;
+    padding: 10px;
+    border-radius: 10px;
+    box-sizing: border-box;
 }
 
 .title {
     text-align: center;
     width: 80%;
+    color: #0288D1;
+    font-family: 'Lobster', cursive;
 }
 
-.title-main {
+.title__main {
     margin: 0 auto;
+    font-size: 1.8rem;
 }
 
 .title__description {
@@ -42,11 +48,12 @@ main {
 .range {
     width: 70%;
     min-width: 315px;
-    background: red;
+    background: linear-gradient(to bottom right, #ff001a, #ff2a3f);
     border-radius: 10px;
     padding: 30px 15px 0 15px;
     margin: 20px auto;
     box-sizing: border-box;
+    box-shadow:  3px 3px 3px rgba(0, 0, 0, 0.4);
 }
 
 .field {
@@ -88,13 +95,13 @@ input {
 }
 
 .note-input {
-    background-image: url('../img/note-background.png');
+    background: #FFF9C4;
+    border-radius: 10px;
     background-size: 415px auto;
-    background-repeat: no-repeat;
     outline: none;
     height: 260px;
-    width: 370px;
-    padding: 60px 40px 0 20px;
+    width: 70%;
+    padding: 10px 20px 0 20px;
     font-size: 1.5rem;
     border: none;
     resize: none;
@@ -105,6 +112,7 @@ input {
 .main-buttons {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 10px;
     margin-top: 20px;
 }
@@ -114,7 +122,6 @@ input {
     flex-direction: column;
     width: 310px;
     height: calc(100vh - 20px);
-    background: #ddd;
     border-radius: 10px;
     margin-top: 20px;
     visibility: hidden;
