--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-.historic {
-    background: #01507a;
-}
-
 main {
     display: flex;
     justify-content: space-around;
@@ -117,6 +113,10 @@ input {
     margin-top: 20px;
 }
 
+.historic {
+    background: #01507a;
+}
+
 .previous-notes {
     display: flex;
     flex-direction: column;
@@ -142,7 +142,7 @@ input {
 .notes-list {
     display: flex;
     flex-direction: column;
-    list-style-type: none;
+    align-items: center;
     margin-top: 0;
 }
 
@@ -179,7 +179,7 @@ input {
     gap: 10px;
 }
 
-.note-item__close {
+.note-delete {
     cursor: pointer;
 }
 
